<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".activities.DashboardActivity">

    <!-- AppBar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/dashboard" />

    <TextView
        android:id="@+id/roleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Role"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:padding="16dp"/>

    <GridLayout
        android:id="@+id/dashboard_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="16dp"
        android:layout_marginTop="16dp">

        <!-- Shift Management Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="navigateToShiftManagement">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/clock_regular"
                app:tint="@color/royal_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shift"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <!-- SMS Module Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="navigateToSMSModule">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_transactions"
                app:tint="@color/royal_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/transactions"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <!-- Leave Schedule and Requests Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="navigateToLeaveSchedule">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_leave_schedule"
                app:tint="@color/royal_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/leave_schedule"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <!-- Profile Management Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="navigateToProfileManagement">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/user_tie_solid"
                app:tint="@color/royal_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_management"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <!--  System Button -->
        <LinearLayout
            android:id="@+id/systemButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="navigateToSettings">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="system"
                android:src="@drawable/ic_settings"
                app:tint="@color/royal_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/settings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </GridLayout>

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dashboard_buttons"
        android:visibility="gone"/>
</RelativeLayout>
